@@ -8,6 +8,7 @@ End buttons pressed.
 * Added ability to move with Page Up and Page Down
 buttons.
 
+* Added moving scrolling by cursor ability.
 
 2012.08.06, Version 0.1.5
 
